chore: dedupe references to headers
